moblie layout bug fix

--- a/css/index.css
+++ b/css/index.css
@@ -74,8 +74,8 @@ h1, h2, h3, h4, h5 {
 .container{
 	display: flex;
 	flex-direction: column;
-	width: 90%;
-	height: 1536px;
+	width: 80%;
+	
 	margin: 0 auto;
 }
 
@@ -135,15 +135,11 @@ h1, h2, h3, h4, h5 {
     }
 }
 
-
-
 .header-cont{
 	width: 50%;
 	float: right;
 
 }
-
-
 
 .column{
 	position: relative;
@@ -176,12 +172,7 @@ h1, h2, h3, h4, h5 {
 	text-align: center;
 }
 
-.services{
-    width: 300px;
-    float: right;
-    padding-right: 10px;
-    padding-bottom: 30px;
-}
+
 
 .row{
 	display: flex;
@@ -211,6 +202,20 @@ h1, h2, h3, h4, h5 {
         flex-direction: column;
     }
 }
+
+.services{
+    width: 300px;
+    float: right;
+    padding-right: 10px;
+    padding-bottom: 30px;
+}
+
+@media (max-width: 900px){
+    .services{
+        width: 100%;
+    }
+}
+
 .button{
 	padding: 8px;
 	margin-left: 147px;
@@ -284,8 +289,7 @@ h1, h2, h3, h4, h5 {
 .container-products{
 	display: flex;
     flex-direction: column;
-    width: 1024px;
-    height: 1536px;
+    width: 1024px;    
     margin: 0 auto;
     padding: 20px 50px;
 }
@@ -317,7 +321,7 @@ h1, h2, h3, h4, h5 {
     .logo{
         position: absolute;
         top: 5px;
-        right: 90px;
+        right: 140px;
         margin-top: 18px;
     }  
 }
